# liquid

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  d  rust-toolchain  rust-toolchain.toml
abi-codec/: Cargo.toml
abi-codec/src/: codec.rs  lib.rs  tests.rs
abi-gen/: Cargo.toml
abi-gen/src/: collaboration.rs  contract.rs  lib.rs  traits.rs  type_to_string.rs
alloc/: Cargo.toml
alloc/src/: handlers.rs  lib.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/env/: api.rs  backend.rs  calldata.rs  error.rs  mod.rs  types.rs
core/src/env/engine/: mod.rs
core/src/env/engine/off_chain/: mod.rs  test_api.rs
core/src/env/engine/on_chain/: buffer.rs  ext.rs  mod.rs
core/src/storage/: cache_entry.rs  mod.rs  traits.rs  value.rs
core/src/storage/cell/: cached_cell.rs  mod.rs  typed_cell.rs
core/src/storage/chunk/: cached_chunk.rs  mod.rs  typed_chunk.rs
core/src/storage/collections/: mod.rs
core/src/storage/collections/iterable_mapping/: impls.rs  mod.rs  tests.rs
core/src/storage/collections/mapping/: impls.rs  mod.rs  tests.rs
core/src/storage/collections/vec/: impls.rs  mod.rs  tests.rs
env/: Cargo.toml
env/src/: api.rs  backend.rs  calldata.rs  lib.rs  types.rs
env/src/engine/: mod.rs
env/src/engine/off_chain/: mod.rs
env/src/engine/off_chain/db/: contract_storage.rs  mod.rs
env/src/engine/on_chain/: buffer.rs  ext.rs  mod.rs
examples/asset/erc20/: Cargo.toml  lib.rs
examples/asset/erc20/.liquid/abi_gen/: Cargo.toml  main.rs
examples/ballot/.liquid/abi_gen/: Cargo.toml  main.rs
examples/collaboration/auction/.liquid/abi_gen/: Cargo.toml  main.rs
examples/collaboration/voting/.liquid/abi_gen/: Cargo.toml  main.rs
examples/contract/hello-world/: Cargo.toml
examples/contract/hello-world/.liquid/abi_gen/: Cargo.toml  main.rs
examples/contract/hello-world/src/: lib.rs
examples/hello_world/: Cargo.toml
examples/hello_world/.liquid/abi_gen/: main.rs
examples/hello_world/src/: lib.rs
examples/incrementer/: Cargo.toml
examples/incrementer/.liquid/abi_gen/: Cargo.toml  main.rs
examples/incrementer/src/: lib.rs
lang/: Cargo.toml
lang/derive/: Cargo.toml
lang/derive/src/: in_out.rs  lib.rs  state.rs  utils.rs  wrapper.rs
lang/derive/tests/: compile_tests.rs
lang/derive/tests/ui/fail/: 01-empty-struct.rs  01-empty-struct.stderr  02-enum.rs  02-enum.stderr  03-union.rs  03-union.stderr  04-not-public.rs  04-not-public.stderr  05-generic.rs  05-generic.stderr  06-invalid-inout-type.rs  06-invalid-inout-type.stderr
lang/derive/tests/ui/pass/: 01-non-empty-struct.rs  02-user-defined-inputs.rs  03-user-defined-output.rs  04-user-defined-state.rs  05-dynamic-array-inout.rs  06-nested-inout.rs
lang/macro/: Cargo.toml  code.rs
lang/macro/src/: common.rs  contract.rs  error.rs  interface.rs  lib.rs  lint.rs  utils.rs
lang/macro/src/codegen/: abi_gen.rs  contract.rs  dispatch.rs  env_types.rs  events.rs  interface.rs  mod.rs  storage.rs  testable.rs  utils.rs
lang/macro/src/codegen/contract_impl/: abi_gen.rs  contract.rs  dispatch.rs  events.rs  mod.rs  storage.rs  testable.rs
lang/macro/src/codegen/interface_impl/: interface.rs  mockable.rs  mod.rs
lang/macro/src/collaboration/: mod.rs
lang/macro/src/collaboration/codegen/: abi_gen.rs  contract_id.rs  contracts.rs  dispatch.rs  mod.rs  path_visitor.rs  rights.rs  storage.rs  utils.rs
lang/macro/src/collaboration/ir/: into.rs  mod.rs  syn_def.rs  utils.rs
lang/macro/src/collaboration/obj_path/: mod.rs  parser.rs  tokenizer.rs
lang/macro/src/contract/: mod.rs
lang/macro/src/contract/codegen/: mod.rs  utils.rs
lang/macro/src/contract/ir/: into.rs  mod.rs  params.rs  syn_def.rs  utils.rs
lang/macro/src/derive/: codec.rs  error.rs  in_out.rs  inout.rs  mod.rs  state.rs  utils.rs  wrapper.rs
lang/macro/src/ir/: into.rs  mod.rs  params.rs  syn_def.rs  utils.rs
lang/macro/tests/: collaboration_compile_tests.rs  compile_tests.rs  contract_compile_tests.rs
lang/macro/tests/ui/fail/: 01-constructor-returns.rs  01-constructor-returns.stderr  02-missing-constructor.rs  03-multiple-constructors.rs  (+95 more)
lang/src/: contract.rs  dispatch_error.rs  dispatcher.rs  env_access.rs  intrinsics.rs  lib.rs  mock.rs  selector_conflict_detect.rs  tests.rs  traits.rs  ty_mapping.rs
lang/src/core/: Cargo.toml
lang/src/core/env/: api.rs  backend.rs  error.rs  mod.rs
lang/src/core/precompiled/: cns.rs
lang/src/core/storage/: cache_entry.rs  mod.rs  value.rs
lang/src/lang_core/: mod.rs
lang/src/lang_core/env/: api.rs  backend.rs  calldata.rs  error.rs  mod.rs
lang/src/lang_core/precompiled/: bfs.rs  cns.rs  mod.rs
lang/src/lang_core/storage/: cache_entry.rs  mod.rs  traits.rs  value.rs
lang/tests/: 02-tic-tac-toe.rs
lang/tests/collaboration/: tests.rs
lang/tests/contract/: tests.rs
lang/tests/contract/common/: mod.rs
lang/tests/contract/liq/: mod.rs
lang/tests/contract/sol/: mod.rs
lang/tests/derive/: tests-liq.rs  tests-sol.rs  tests.rs
lang/tests/derive/common/: mod.rs
lang/tests/derive/liq/: mod.rs
lang/tests/derive/sol/: mod.rs
macro/: Cargo.toml
macro/src/: lib.rs  parse.rs  utils.rs
macro/src/create/: mod.rs
macro/src/seq/: mod.rs  parse.rs
macro/src/sign/: mod.rs
macro/tests/: compile_tests.rs
macro/tests/ui/fail/: 01-missing-var.rs  01-missing-var.stderr  02-missing-in-keyword.rs  02-missing-in-keyword.stderr  03-invalid-range.rs  03-invalid-range.stderr
macro/tests/ui/pass/: 01-expand-noop.rs  02-expand-body.rs  03-expand-enum.rs  04-expand-array.rs  05-expand-tuple.rs  06-expand-grouped-range.rs  07-expand-add-one.rs
prelude/: Cargo.toml
prelude/src/: lib.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
primitives/src/hash/: keccak.rs  mod.rs  sm3.rs
primitives/src/types/: address.rs  address_impl.rs  bytes.rs  bytes_impl.rs  fixed_point.rs  fixed_point_simple.rs  fixed_size_bytes.rs  hash.rs  hash_impl.rs  int256.rs  mod.rs  uint256.rs
storage/: Cargo.toml
storage/src/: lib.rs  value.rs
storage/src/cell/: cached_cell.rs  typed_cell.rs
ty_mapping/: Cargo.toml
ty_mapping/src/: lib.rs  traits.rs
(+417 files in other folders)
