[package]
name = "liquid_abi_codec"
version = "0.1.0"
authors = ["vita-dounai <lichenxi.webank@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "0.1.17"

liquid_prelude = { version = "0.1.0", path = "../prelude/", default-features = false }
liquid_macro = { version = "0.1.0", path = "../macro/", default-features = false }

[dev-dependencies]
hex-literal = "0.2.1"

[features]
default = ["std"]
std = [
    "liquid_prelude/std",
]
