[package]
name = "liquid_abi_gen"
version = "0.1.0"
authors = ["vita-dounai <lichenxi.webank@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.114", default-features = false, features = ["derive", "alloc"] }

liquid_macro = { version = "0.1.0", path = "../macro", default-features = false }
liquid_prelude = { version = "0.1.0", path = "../prelude", default-features = false }
liquid_ty_mapping = { version = "0.1.0", path = "../ty_mapping", default-features = false }
liquid_primitives = { version = "0.1.0", path = "../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "serde/std",
    "liquid_prelude/std",
    "liquid_ty_mapping/std",
    "liquid_primitives/std",
]