[package]
name = "liquid_abi_gen"
version = "1.0.0-rc2"
authors = ["vita-dounai <lichenxi.webank@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
cfg-if = "0.1.10"
derive_more = "0.99.9"

liquid_macro = { version = "1.0.0-rc2", path = "../macro", default-features = false }
liquid_prelude = { version = "1.0.0-rc2", path = "../prelude", default-features = false }
liquid_primitives = { version = "1.0.0-rc2", path = "../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "serde/std",
    "liquid_prelude/std",
    "liquid_primitives/std",
]
contract = [
    "liquid_primitives/contract",
]
collaboration = [
    "liquid_macro/collaboration",
]