[package]
name = "liquid_alloc"
version = "0.2.0"
authors = ["vita-dounai <lichenxi.webank@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wee_alloc = { version = "0.4.2", default-features = false }

[features]
default = ["std"]
std = []
