[package]
name = "liquid_core"
version = "0.1.0"
authors = ["vita-dounai <lichenxi.webank@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "0.1.17"
scale = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive", "full"] }
cfg-if = "0.1.10"
derive_more = "0.99.9"
chrono = { version = "0.4.13", optional = true }

liquid_primitives = { version = "0.1.0", path = "../primitives", default-features = false }
liquid_prelude = { version = "0.1.0", path = "../prelude", default-features = false }
liquid_abi_codec = { version = "0.1.0", path = "../abi-codec", default-features = false }
liquid_alloc = { version = "0.1.0", path = "../alloc", default-features = false }
liquid_abi_gen = { version = "0.1.0", path = "../abi-gen", default-features = false, optional = true }

[features]
default = ["std"]
std = [
    "liquid_primitives/std",
    "liquid_prelude/std",
    "liquid_abi_codec/std",
    "liquid_alloc/std",
    "scale/std",
    "chrono",
]
liquid-abi-gen = [
    "liquid_abi_gen"
]