[package]
name = "liquid_env"
version = "0.1.0"
authors = ["vita-dounai <lichenxi.webank@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "0.1.10"
scale = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive", "full"] }
derive_more = "0.99.9"

liquid_prelude = { version = "0.1.0", path = "../prelude/", default-features = false }
liquid_primitives = { version = "0.1.0", path = "../primitives/", default-features = false }
liquid_abi_coder = { version = "0.1.0", path = "../abi-coder/", default-features = false }

[features]
default = ["std"]
std = [
    "scale/std",
    "liquid_prelude/std",
    "liquid_primitives/std",
    "liquid_abi_coder/std",
]
