[package]
name = "liquid_macro"
version = "1.0.0-rc1"
authors = ["vita-dounai <lichenxi.webank@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.18"
quote = "1.0.7"
syn = { version = "1.0.33", features = ["full", "extra-traits", "parsing"] }

liquid_prelude = { version = "1.0.0-rc1", path = "../prelude", default-features = false }

[dev-dependencies]
trybuild = "1.0.30"

[lib]
proc-macro = true

[features]
default = ["std"]
std = [
    "liquid_prelude/std"
]
collaboration = []
