[package]
name = "liquid_primitives"
version = "0.1.0"
authors = ["vita-dounai <lichenxi.webank@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liquid_prelude = { version = "0.1.0", path = "../prelude/", default-features = false }

[features]
default = ["std"]
std = [
    "liquid_prelude/std",
]

