[package]
name = "liquid_storage"
version = "0.1.0"
authors = ["vita-dounai <lichenxi.webank@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scale = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive", "full"] }

liquid_primitives = { version = "0.1.0", path = "../primitives/", default-features = false }
liquid_env = { version = "0.1.0", path = "../env/", default-features = false }
liquid_prelude = { version = "0.1.0", path = "../prelude/", default-features = false }

[features]
default = ["std"]
std = [
    "scale/std",
    "liquid_primitives/std",
    "liquid_env/std",
    "liquid_prelude/std",
]