[package]
name = "liquid_ty_mapping"
version = "0.2.0"
authors = ["vita-dounai <lichenxi.webank@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liquid_prelude = { version = "0.2.0", path = "../prelude", default-features = false }
liquid_macro = { version = "0.2.0", path = "../macro", default-features = false }
liquid_primitives = { version = "0.2.0", path = "../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "liquid_prelude/std",
    "liquid_macro/std",
    "liquid_primitives/std",
]
contract = []
