[package]
name = "hello_world"
version = "0.1.0"
authors = ["vita-dounai <lichenxi.webank@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liquid_core = { version = "0.1.0", path = "../../core", default-features = false }
liquid_lang = { version = "0.1.0", path = "../../lang", default-features = false }
liquid_primitives = { version = "0.1.0", path = "../../primitives", default-features = false }
liquid_abi_codec = { version = "0.1.0", path = "../../abi-codec", default-features = false }
liquid_abi_gen = { version = "0.1.0", path = "../../abi-gen", default-features = false, optional = true }

[lib]
name = "hello_world"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    # Used for ABI generation.
    "rlib",
]

[features]
default = ["std"]
std = [
    "liquid_core/std",
    "liquid_lang/std",
    "liquid_primitives/std",
    "liquid_abi_gen/std",
]
liquid-abi-gen = [
    "std",
    "liquid_abi_gen",
    "liquid_lang/liquid-abi-gen",
]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
overflow-checks = true

[workspace]
members = [
    ".liquid/abi_gen",
]
exclude = [
    ".liquid",
]
