[package]
name = "incrementer"
version = "0.1.0"
authors = ["vita-dounai <lichenxi.webank@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liquid_env = { version = "0.1.0", path = "../../env", default-features = false }
liquid_lang = { version = "0.1.0", path = "../../lang", default-features = false }
liquid_primitives = { version = "0.1.0", path = "../../primitives", default-features = false }
liquid_storage = { version = "0.1.0", path = "../../storage", default-features = false }

[lib]
name = "incrementer"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib"
]

[features]
default = ["std"]
std = [
    "liquid_env/std",
    "liquid_lang/std",
    "liquid_primitives/std",
    "liquid_storage/std",
]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
overflow-checks = true
