[package]
name = "liquid_lang_derive"
version = "0.1.0"
authors = ["vita-dounai <lichenxi.webank@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.7"
syn = { version = "1.0.33", features = ["full", "extra-traits", "parsing"] }
proc-macro2 = "1.0.18"

liquid_prelude = { version = "0.1.0", path = "../../prelude", default-features = false }

[dev-dependencies]
trybuild = "1.0.30"

liquid_lang = { version = "0.1.0", path = "../" }
liquid_abi_codec = { version = "0.1.0", path = "../../abi-codec" }
liquid_core = { version = "0.1.0", path = "../../core" }
liquid_primitives = { version = "0.1.0", path = "../../primitives" }
liquid_abi_gen = { version = "0.1.0", path = "../../abi-gen" }

[lib]
proc-macro = true

[features]
default = ["std"]
std = []