[package]
name = "liquid_lang_macro"
version = "0.1.0"
authors = ["vita-dounai <lichenxi.webank@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.7"
syn = { version = "1.0.33", features = ["full", "extra-traits", "parsing"] }
proc-macro2 = "1.0.18"
regex = "1.3.9"
derive_more = "0.99.9"
either = { version = "1.5.3", default-features = false }
itertools = { version = "0.9.0", default-features = false }

liquid_prelude = { version = "0.1.0", path = "../../prelude", default-features = false }
liquid_primitives = { version = "0.1.0", path = "../../primitives", default-features = false }
liquid_ty_mapping = { version = "0.1.0", path = "../../ty_mapping", default-features = false }

[dev-dependencies]
trybuild = "1.0.30"

liquid_lang = { version = "0.1.0", path = "../" }
liquid_core = { version = "0.1.0", path = "../../core" }
liquid_abi_gen = { version = "0.1.0", path = "../../abi-gen" }

[lib]
name = "liquid_lang_macro"
proc-macro = true

[features]
default = ["std"]
std = [
    "liquid_prelude/std",
    "liquid_primitives/std",
]
