[package]
name = "liquid_lang_macro"
version = "0.2.0"
authors = ["vita-dounai <lichenxi.webank@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.7"
syn = { version = "1.0.33", features = ["full", "extra-traits", "parsing"] }
proc-macro2 = "1.0.18"
regex = "1.3.9"
derive_more = "0.99.9"
cfg-if = "0.1.10"
either = { version = "1.5.3", default-features = false }
itertools = { version = "0.9.0", default-features = false }
heck = "0.3.1"
paste = "0.1.17"
cfg-if = "0.1.10"
id-arena = "2.2.1"
log = "0.4"
env_logger = "0.7"

liquid_prelude = { version = "0.2.0", path = "../../prelude", default-features = false }
liquid_primitives = { version = "0.2.0", path = "../../primitives", default-features = false }
liquid_ty_mapping = { version = "0.2.0", path = "../../ty_mapping", default-features = false }

[dev-dependencies]
tempfile = "3.1.0"
serial_test = "0.5.1"

[lib]
name = "liquid_lang_macro"
proc-macro = true

[features]
default = ["std"]
std = [
    "liquid_prelude/std",
    "liquid_primitives/std",
    "liquid_ty_mapping/std",
]
gm = []
contract = [
    "liquid_primitives/contract",
    "liquid_ty_mapping/contract",
]
solidity-compatible = []
collaboration = []
solidity-interface = []
