[package]
name = "abi-gen"
version = "0.1.0"
authors = ["vita-dounai <lichenxi.webank@gmail.com>"]
edition = "2018"
publish = false

[[bin]]
name = "abi-gen"
path = "main.rs"

[dependencies]
contract = { path = "../..", package = "ballot", default-features = false, features = ["liquid-abi-gen"] }
liquid_lang = { path = "../../../../lang", default-features = false, features = ["liquid-abi-gen"] }
serde = "1.0"
serde_json = "1.0"
