[package]
name = "abi-gen"
version = "1.0.0-rc2"
authors = ["vita-dounai <lichenxi.webank@gmail.com>"]
edition = "2018"
publish = false

[[bin]]
name = "abi-gen"
path = "main.rs"

[dependencies.collaboration]
path = "../../"
package = "auction"
default-features = false
features = ["liquid-abi-gen"]

[dependencies.liquid_lang]
path = "../../../../../lang"
default-features = false
features = ["collaboration-abi-gen"]

[dependencies]
serde = "1.0"
serde_json = "1.0"

